Dart/testData/highlighting/UnusedImports.dart
import <error descr="Target of URI does not exist: 'UnusedImports.dart'">"UnusedImports.dart"</error>;
import "dart:collection";
import <weak_warning descr="Duplicate import">"dart:collection"</weak_warning>;
import <weak_warning descr="Unused import">"dart:math"</weak_warning>;

Queue a;
